# python-template-sci

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter.json
.github/workflows/: ci.yaml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  Apptainer  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
{{cookiecutter.project_name}}/.github/workflows/: ci.yaml
{{cookiecutter.project_name}}/data/: README.md
{{cookiecutter.project_name}}/scripts/: example.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: constants.py
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py
